# social-media-dlp-bot

./: .gitignore  LICENSE  README.md  docker-compose.botapi.yml  pyproject.toml
src/social_media_dlp_bot/: bot.py  config.py  downloader.py  exceptions.py  main.py
src/social_media_dlp_bot/services/: file_http_server.py  file_senders.py
tests/: test_run.py
