[project]
name = "social-media-dlp-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "VladRys",email = "rysichvlad0910@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp (>=2026.2.4,<2027.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "telebot (>=0.0.5,<0.0.6)"
]

[tool.poetry]
packages = [{include = "social_media_dlp_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
